# bogdan-bear

./: .hgignore  DevelopmentSetup.md  MarkWorkLog.md  MeetingMinutes.md  ProjectHome.md  PrototypeDesign.md  VisualContentList.md
Models/: BOGDANTower.material  Bowl.material  Bowl.mesh  BowlBul.bullet  Bowlchip.material  Bowlchip.mesh  SmallerBowl.mesh  bowl.bullet  bowlup.bullet  explosionSphere.particle  fivebb.bullet  fivebbb.bullet  fourbb.bullet  fourbbb.bullet  glow.cg  glow.compositor  glow.program  goal.bullet  goal.material  goal.mesh  goal2.bullet  goal_pCylinderShape1.psd  goal_pCylinderShape1Mask.psd  gunAmmo1.material  gunAmmo1.mesh  gunAmmo2.material  gunAmmo2.mesh  gunAmmo3.material  gunAmmo3.mesh  gunAmmo4.material  gunAmmo4.mesh  gunAmmoGreen.material  gunAmmoGreen1.material  gunAmmoGreen2.material  gunAmmoGreen2.psd  gunAmmoGreen3.material  gunAmmoOrange.material  gunAmmoOrange.psd  gunAmmoOrange1.material  gunAmmoOrange2.material  (+83 more)
OGRETest/: BaseApplication.cpp  CMakeLists.txt  OGRETest.cpp  OGRETest.h
Ogre3DInterpDemo/: App3D.cpp  ClassDiagram1.cd  Graphics.cfg  Ogre3DInterpDemo.ilk  Ogre3DInterpDemo.sln  Ogre3DInterpDemo.vcxproj  Ogre3DInterpDemo.vcxproj.filters  UpgradeLog.XML  WinMain.cpp
Prototype/: BaseApplication.cpp  BaseApplication.h  BtKinematicCharacterController.cpp  BtKinematicCharacterController.h  BtOgreExtras.h  Builder.cpp  Builder.h  CMakeLists.txt  Explosion.cpp  Explosion.h  ExplosionGraphics.cpp  ExplosionGraphics.h  ExplosionPhysics.cpp  ExplosionPhysics.h  FallingObject.cpp  FallingObject.h  Game.cpp  Game.h  GameTestThing.cpp  GameTestThing.h  GlowMaterialListener.h  Goal.cpp  Goal.h  InputManager.cpp  InputManager.h  MaterialListener.cpp  MetaShapeBuilder.cpp  MetaShapeBuilder.h  NetworkTestStuff.cpp  NetworkTestStuff.h  Object.cpp  Object.h  PhysicsObject.h  Ping.cpp  Ping.h  Platform.cpp  Platform.h  PlatformGraphics.cpp  PlatformGraphics.h  PlatformPhysics.cpp  (+46 more)
Prototype/bullet/: CMakeLists.txt
Prototype/bullet/src/BulletWorldImporter/: BulletFileLoader_Debug.lib  BulletWorldImporter_Debug.lib
Refactor/: CMakeLists.txt  HelloWorld.cpp
TowerSrc/: BaseApplication.cpp  CMakeLists.txt  Tower.cpp  Tower.h
TowerSrc/Models/: 1.mesh  2.mesh  3.mesh  4.mesh  5.mesh  6.mesh  7.mesh
raknet test/: CMakeLists.txt
raknet test/ping/: CMakeLists.txt
